--- a/public/index.html
+++ b/public/index.html
@@ -29,11 +29,11 @@
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <div class="navbar-brand" href="#/">Rolendar GPS REST API</div>
+          <div class="navbar-brand" href="/">Rolendar GPS REST API</div>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#/">Home</a></li>
+            <li class="active"><a href="/">Home</a></li>
           </ul>
         </div>
       </div>
